this id added 2

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
             <li>Sign In</li>
         </ul>
     </header>
+    <main>
+        <h1>This is the main</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus rem illo natus repellat ullam deleniti, corrupti aperiam neque omnis corporis debitis repellendus nam nesciunt fuga odit aliquam atque laudantium incidunt.</p>
+    </main>
 </body>
 </html>
